Fix invisible <hr>
But I don't really like how that color looks when on a thicker region...

--- a/src/colors.css
+++ b/src/colors.css
@@ -1,4 +1,5 @@
 .vscode-body {
+  --color-border-default: var(--vscode-editorIndentGuide-activeBackground);
   --color-border-muted: var(--vscode-editorIndentGuide-background);
   --color-neutral-muted: rgba(20, 20, 20, 0.2);
 }
